--- a/index.html
+++ b/index.html
@@ -3,24 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Политика конфиденциальности — Portal Mobile</title>
+    <title>Политика конфиденциальности – Portal Mobile</title>
     <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; margin: 40px; line-height: 1.6; color: #333; max-width: 800px; margin: 60px auto; padding: 20px; }
-        h1, h2 { color: #111; }
-        a { color: #0066cc; }
-        .lang-switch { margin: 30px 0; }
-        .lang-switch a { margin-right: 20px; font-weight: bold; }
+        body {margin:0;font-family:-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;background:#f8f9fa;color:#212529;}
+        .container {max-width:800px;margin:60px auto;padding:40px 20px;}
+        header {text-align:center;margin-bottom:50px;}
+        h1 {font-size:28px;font-weight:600;margin:0 0 10px 0;}
+        .subtitle {color:#6c757d;font-size:16px;}
+        main {background:#fff;padding:40px;border-radius:12px;box-shadow:0 4px 20px rgba(0,0,0,0.06);}
+        h2 {font-size:20px;margin:35px 0 15px;color:#343a40;border-bottom:1px solid #eee;padding-bottom:8px;}
+        p, li {line-height:1.7;font-size:16px;color:#495057;}
+        ul {padding-left:20px;}
+        .footer {text-align:center;margin-top:60px;color:#868e96;font-size:14px;}
+        a {color:#0d6efd;text-decoration:none;}
+        a:hover {text-decoration:underline;}
     </style>
 </head>
 <body>
-    <h1>Политика конфиденциальности</h1>
-    <div class="lang-switch">
-        <a href="ru.html">Русский</a> | <a href="en.html">English</a>
+<div class="container">
+    <header>
+        <h1>Политика конфиденциальности</h1>
+        <p class="subtitle">Мобильное приложение Portal Mobile</p>
+    </header>
+    <main>
+        <p><strong>Дата вступления в силу:</strong> 1 декабря 2025 года</p>
+
+        <h2>1. Общие положения</h2>
+        <p>Настоящая Политика конфиденциальности описывает порядок обработки персональных данных в мобильном приложении <strong>Portal Mobile</strong>, разработанном ТОО «AlterApp» (Республика Казахстан).</p>
+
+        <h2>2. Какие данные мы НЕ собираем</h2>
+        <p>Приложение <strong>не собирает, не хранит и не передаёт третьим лицам никаких персональных данных</strong>. В частности, мы не получаем и не обрабатываем:</p>
+        <ul>
+            <li>имя, адрес электронной почты, номер телефона</li>
+            <li>геолокацию</li>
+            <li>рекламный идентификатор устройства (IDFA)</li>
+            <li>любые другие персональные данные</li>
+        </ul>
+
+        <h2>3. Использование WebView</h2>
+        <p>Приложение является удобной мобильной оболочкой и отображает официальный сайт <a href="https://portal.petroleum.com.kz" target="_blank">https://portal.petroleum.com.kz</a> с помощью стандартного компонента WebView. Все данные (cookies, IP-адрес, данные сессии и т.д.), которые передаются при работе с сайтом, обрабатываются исключительно самим сайтом в соответствии с его политикой конфиденциальности.</p>
+
+        <h2>4. Отсутствие сторонних сервисов</h2>
+        <p>В приложении полностью отсутствуют:</p>
+        <ul>
+            <li>аналитические системы</li>
+            <li>реклама и рекламные трекеры</li>
+            <li>push-уведомления</li>
+            <li>встроенные покупки</li>
+            <li>авторизация через сторонние сервисы</li>
+        </ul>
+
+        <h2>5. Контакты разработчика</h2>
+        <p>ТОО «AlterApp»<br>
+        Республика Казахстан<br>
+        Email: info@alterapp.kz</p>
+
+        <p>По всем вопросам, связанным с политикой конфиденциальности, пишите на указанный адрес.</p>
+    </main>
+    <div class="footer">
+        © 2025 AlterApp. Все права защищены.
     </div>
-    <p>Перейдите на нужную версию:</p>
-    <ul>
-        <li><a href="ru.html">Русский язык</a></li>
-        <li><a href="en.html">English</a></li>
-    </ul>
+</div>
 </body>
 </html>
