--- a/en.html
+++ b/en.html
@@ -3,37 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy — Portal Mobile</title>
+    <title>Privacy Policy – Portal Mobile</title>
     <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; margin: 60px auto; max-width: 800px; line-height: 1.7; color: #333; padding: 20px; }
-        h1, h2 { color: #111; }
+        body {margin:0;font-family:-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;background:#f8f9fa;color:#212529;}
+        .container {max-width:800px;margin:60px auto;padding:40px 20px;}
+        header {text-align:center;margin-bottom:50px;}
+        h1 {font-size:28px;font-weight:600;margin:0 0 10px 0;}
+        .subtitle {color:#6c757d;font-size:16px;}
+        main {background:#fff;padding:40px;border-radius:12px;box-shadow:0 4px 20px rgba(0,0,0,0.06);}
+        h2 {font-size:20px;margin:35px 0 15px;color:#343a40;border-bottom:1px solid #eee;padding-bottom:8px;}
+        p, li {line-height:1.7;font-size:16px;color:#495057;}
+        ul {padding-left:20px;}
+        .footer {text-align:center;margin-top:60px;color:#868e96;font-size:14px;}
+        a {color:#0d6efd;text-decoration:none;}
+        a:hover {text-decoration:underline;}
     </style>
 </head>
 <body>
-    <a href="/portal-mobile-policy/">← Back</a>
-    <h1>Privacy Policy</h1>
-    <p><strong>Effective date: December 1, 2025</strong></p>
+<div class="container">
+    <header>
+        <h1>Privacy Policy</h1>
+        <p class="subtitle">Portal Mobile application</p>
+    </header>
+    <main>
+        <p><strong>Effective date:</strong> December 1, 2025</p>
 
-    <p>The mobile application <strong>Portal Mobile</strong> (hereinafter — the App) does not collect, store, or share any personal data of users.</p>
+        <h2>1. General</h2>
+        <p>This Privacy Policy governs the processing of personal data in the <strong>Portal Mobile</strong> application developed by AlterApp LLP (Republic of Kazakhstan).</p>
 
-    <h2>1. Data We collect no personal data</h2>
-    <p>The App does not request or receive:</p>
-    <ul>
-        <li>name, email, phone number</li>
-        <li>location data</li>
-        <li>advertising identifier (IDFA)</li>
-        <li>any other personal information</li>
-    </ul>
+        <h2>2. Data we do NOT collect</h2>
+        <p>The application <strong>does not collect, store or transfer to third parties any personal data</strong>. We do not receive or process:</p>
+        <ul>
+            <li>name, email address, phone number</li>
+            <li>location data</li>
+            <li>advertising identifier (IDFA)</li>
+            <li>any other personal information</li>
+        </ul>
 
-    <h2>2. WebView usage</h2>
-    <p>The App uses a standard WebView component to display the website https://portal.petroleum.com.kz/. Any data transmitted while browsing the site (IP address, cookies, etc.) is processed solely by the website according to its own privacy policy.</p>
+        <h2>3. WebView usage</h2>
+        <p>The application displays the official website <a href="https://portal.petroleum.com.kz" target="_blank">https://portal.petroleum.com.kz</a> using the standard WebView component. All data transmitted while browsing the site is processed solely by the website in accordance with its own privacy policy.</p>
 
-    <h2>3. No analytics, no advertising</h2>
-    <p>The App contains no analytics tools, advertising, push notifications, or in-app purchases.</p>
+        <h2>4. No third-party services</h2>
+        <p>The application does not contain analytics, advertising, push notifications, in-app purchases or third-party authentication.</p>
 
-    <h2>4. Contact</h2>
-    <p>Developer: AlterApp LLP<br>
-    Republic of Kazakhstan<br>
-    Email: info@alterapp.kz</p>
+        <h2>5. Contact information</h2>
+        <p>AlterApp LLP<br>Republic of Kazakhstan<br>Email: info@alterapp.kz</p>
+    </main>
+    <div class="footer">
+        © 2025 AlterApp. All rights reserved.
+    </div>
+</div>
 </body>
 </html>
