--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Политика конфиденциальности – Portal Mobile</title>
+    <title>Политика конфиденциальности приложения Portal Mobile</title>
     <style>
         body {margin:0;font-family:-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;background:#f8f9fa;color:#212529;}
         .container {max-width:800px;margin:60px auto;padding:40px 20px;}
@@ -22,46 +22,55 @@
 <body>
 <div class="container">
     <header>
-        <h1>Политика конфиденциальности</h1>
-        <p class="subtitle">Мобильное приложение Portal Mobile</p>
+        <h1>Политика конфиденциальности приложения Portal Mobile</h1>
+        <p class="subtitle">Дата обновления: 1 декабря 2025</p>
     </header>
+
     <main>
-        <p><strong>Дата вступления в силу:</strong> 1 декабря 2025 года</p>
+        <p><strong>Юридическое лицо:</strong> ТОО «AlterApp»<br>
+           <strong>Адрес:</strong> Казахстан, г. Алматы, ул. Ади Шарипова 90, офис 216<br>
+           <strong>Email для связи:</strong> info@alterapp.net</p>
 
         <h2>1. Общие положения</h2>
-        <p>Настоящая Политика конфиденциальности описывает порядок обработки персональных данных в мобильном приложении <strong>Portal Mobile</strong>, разработанном ТОО «AlterApp» (Республика Казахстан).</p>
+        <p>Мобильное приложение <strong>Portal Mobile</strong> является официальной оболочкой для доступа к корпоративному порталу <a href="https://portal.petroleum.com.kz">https://portal.petroleum.com.kz</a> с мобильных устройств iOS.</p>
+        <p>Само приложение не собирает и не хранит персональные данные на устройстве. Все данные обрабатываются исключительно веб-сайтом внутри компонента WebView.</p>
 
-        <h2>2. Какие данные мы НЕ собираем</h2>
-        <p>Приложение <strong>не собирает, не хранит и не передаёт третьим лицам никаких персональных данных</strong>. В частности, мы не получаем и не обрабатываем:</p>
+        <h2>2. Данные, обрабатываемые внутри приложения</h2>
+        <p>Само iOS-приложение <strong>Portal Mobile</strong>:</p>
         <ul>
-            <li>имя, адрес электронной почты, номер телефона</li>
-            <li>геолокацию</li>
-            <li>рекламный идентификатор устройства (IDFA)</li>
-            <li>любые другие персональные данные</li>
+            <li>не запрашивает и не сохраняет логин, пароль или токены</li>
+            <li>не использует аналитику, рекламу, push-уведомления или встроенные покупки</li>
+            <li>не получает доступ к геолокации, камере, фото и другим разрешениям</li>
+            <li>не использует рекламный идентификатор (IDFA)</li>
         </ul>
 
-        <h2>3. Использование WebView</h2>
-        <p>Приложение является удобной мобильной оболочкой и отображает официальный сайт <a href="https://portal.petroleum.com.kz" target="_blank">https://portal.petroleum.com.kz</a> с помощью стандартного компонента WebView. Все данные (cookies, IP-адрес, данные сессии и т.д.), которые передаются при работе с сайтом, обрабатываются исключительно самим сайтом в соответствии с его политикой конфиденциальности.</p>
-
-        <h2>4. Отсутствие сторонних сервисов</h2>
-        <p>В приложении полностью отсутствуют:</p>
+        <h2>3. Данные, обрабатываемые на веб-портале</h2>
+        <p>После авторизации на сайте https://portal.petroleum.com.kz внутри приложения могут обрабатываться:</p>
         <ul>
-            <li>аналитические системы</li>
-            <li>реклама и рекламные трекеры</li>
-            <li>push-уведомления</li>
-            <li>встроенные покупки</li>
-            <li>авторизация через сторонние сервисы</li>
+            <li>учётные данные сотрудника (логин/ID)</li>
+            <li>корпоративный email</li>
+            <li>данные профиля, документы и служебная информация</li>
+            <li>cookies и токены сессии</li>
+            <li>IP-адрес и техническая информация о подключении</li>
         </ul>
+        <p>Все эти данные принадлежат вашей организации и обрабатываются исключительно на серверах портала в соответствии с внутренней политикой безопасности вашей компании.</p>
 
-        <h2>5. Контакты разработчика</h2>
-        <p>ТОО «AlterApp»<br>
-        Республика Казахстан<br>
-        Email: info@alterapp.kz</p>
+        <h2>4. Передача данных</h2>
+        <p>Приложение передаёт данные только на серверы https://portal.petroleum.com.kz по защищённому протоколу HTTPS. Никакие данные не передаются третьим лицам, кроме случаев, предусмотренных законодательством Республики Казахстан.</p>
 
-        <p>По всем вопросам, связанным с политикой конфиденциальности, пишите на указанный адрес.</p>
+        <h2>5. Безопасность</h2>
+        <p>Все соединения защищены HTTPS/TLS. Приложение не сохраняет пароли и токены на устройстве.</p>
+
+        <h2>6. Обратная связь</h2>
+        <p>По вопросам работы приложения и обработки данных:<br>
+        info@alterapp.net</p>
+
+        <h2>7. Изменения политики</h2>
+        <p>ТОО «AlterApp» вправе обновлять данную Политику. Новая версия вступает в силу с момента публикации.</p>
     </main>
+
     <div class="footer">
-        © 2025 AlterApp. Все права защищены.
+        © 2025 ТОО «AlterApp». Все права защищены.
     </div>
 </div>
 </body>
