--- a/en.html
+++ b/en.html
@@ -13,44 +13,51 @@
         main {background:#fff;padding:40px;border-radius:12px;box-shadow:0 4px 20px rgba(0,0,0,0.06);}
         h2 {font-size:20px;margin:35px 0 15px;color:#343a40;border-bottom:1px solid #eee;padding-bottom:8px;}
         p, li {line-height:1.7;font-size:16px;color:#495057;}
-        ul {padding-left:20px;}
         .footer {text-align:center;margin-top:60px;color:#868e96;font-size:14px;}
         a {color:#0d6efd;text-decoration:none;}
-        a:hover {text-decoration:underline;}
     </style>
 </head>
 <body>
 <div class="container">
     <header>
-        <h1>Privacy Policy</h1>
-        <p class="subtitle">Portal Mobile application</p>
+        <h1>Privacy Policy of Portal Mobile app</h1>
+        <p class="subtitle">Last updated: December 1, 2025</p>
     </header>
+
     <main>
-        <p><strong>Effective date:</strong> December 1, 2025</p>
+        <p><strong>Legal entity:</strong> AlterApp LLP<br>
+           <strong>Address:</strong> Kazakhstan, Almaty, 90 Adi Sharipova str., office 216<br>
+           <strong>Contact:</strong> info@alterapp.net</p>
 
         <h2>1. General</h2>
-        <p>This Privacy Policy governs the processing of personal data in the <strong>Portal Mobile</strong> application developed by AlterApp LLP (Republic of Kazakhstan).</p>
+        <p><strong>Portal Mobile</strong> is an official mobile wrapper for the corporate portal https://portal.petroleum.com.kz.</p>
+        <p>The iOS application itself does not collect or store any personal data on the device.</p>
 
-        <h2>2. Data we do NOT collect</h2>
-        <p>The application <strong>does not collect, store or transfer to third parties any personal data</strong>. We do not receive or process:</p>
+        <h2>2. Data processed by the app itself</h2>
+        <p>The app does not request login/password, does not use analytics, advertising, push notifications, in-app purchases, location, camera or any other permissions.</p>
+
+        <h2>3. Data processed on the web portal</h2>
+        <p>After logging into the website inside the app the following data may be processed by the portal:</p>
         <ul>
-            <li>name, email address, phone number</li>
-            <li>location data</li>
-            <li>advertising identifier (IDFA)</li>
-            <li>any other personal information</li>
+            <li>employee login/ID and corporate email</li>
+            <li>profile data, documents and workflow data</li>
+            <li>cookies and session tokens</li>
+            <li>IP address and connection details</li>
         </ul>
+        <p>All these data belong to your organization and are processed solely on the portal servers.</p>
 
-        <h2>3. WebView usage</h2>
-        <p>The application displays the official website <a href="https://portal.petroleum.com.kz" target="_blank">https://portal.petroleum.com.kz</a> using the standard WebView component. All data transmitted while browsing the site is processed solely by the website in accordance with its own privacy policy.</p>
+        <h2>4. Data sharing</h2>
+        <p>Data is transmitted only to https://portal.petroleum.com.kz via HTTPS. No third-party sharing except as required by law.</p>
 
-        <h2>4. No third-party services</h2>
-        <p>The application does not contain analytics, advertising, push notifications, in-app purchases or third-party authentication.</p>
+        <h2>5. Contact</h2>
+        <p>info@alterapp.net</p>
 
-        <h2>5. Contact information</h2>
-        <p>AlterApp LLP<br>Republic of Kazakhstan<br>Email: info@alterapp.kz</p>
+        <h2>6. Changes</h2>
+        <p>We may update this policy. New version becomes effective upon publication.</p>
     </main>
+
     <div class="footer">
-        © 2025 AlterApp. All rights reserved.
+        © 2025 AlterApp LLP. All rights reserved.
     </div>
 </div>
 </body>
